# omi-pendant-chronicle

./: .gitignore  README.md
android-app/: README.md  STORE_M2.5.md  gradle.properties  local.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/kotlin/com/connor/pendant/: DebugActivity.kt  MainActivity.kt  PendantBridge.kt
android-app/app/src/main/kotlin/com/connor/pendant/audio/: AudioOutClient.kt  AudioOutPlayer.kt
android-app/app/src/main/kotlin/com/connor/pendant/ble/: OmiBleClient.kt  OmiUuids.kt
android-app/app/src/main/kotlin/com/connor/pendant/context/: ContextCollector.kt  HeartbeatPoster.kt
android-app/app/src/main/kotlin/com/connor/pendant/health/: BackfillReceiver.kt  HealthConnectBackfill.kt  HealthConnectReader.kt
android-app/app/src/main/kotlin/com/connor/pendant/net/: AgentUploader.kt  ChronicleApi.kt  ChronicleSnapshotCache.kt
android-app/app/src/main/kotlin/com/connor/pendant/service/: PendantForegroundService.kt
android-app/app/src/main/kotlin/com/connor/pendant/store/: AudioSegment.kt  AudioSegmentDao.kt  (+2 more)
android-app/app/src/main/res/values/: strings.xml  styles.xml
android-app/app/src/main/res/xml/: shortcuts.xml
android-app/gradle/: libs.versions.toml
android-app/scripts/: bootstrap-on-agent.sh  sync-and-build.ps1
desktop-collector/: .gitignore  README.md  drain_task.example.ps1  flash-firmware.example.ps1  pyproject.toml
desktop-collector/src/pendant_collector/: __init__.py  cli.py  collector.py  uploader.py  uuids.py
(+1 files in other folders)
