[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendant-desktop-collector"
version = "0.1.0"
description = "Desktop BLE collector for Omi pendant offline storage"
requires-python = ">=3.10"
dependencies = [
  "bleak>=0.22.3",
  "httpx>=0.27.0",
]

[project.scripts]
pendant-collector = "pendant_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

